--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -100,8 +100,8 @@ input::placeholder {
   right: 1rem;
   top: 1rem;
 }
+
 .beta {
-  border-radius: 10px;
   position: absolute;
   right: 2%;
   top: 33px;
@@ -112,7 +112,6 @@ input::placeholder {
   text-align: center;
   font-size: 30px;
   font-weight: bold;
-  background: #ffffff;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding: 3px 15px;
@@ -130,6 +129,9 @@ input::placeholder {
   width: 120%;
   left: -2.8rem;
   bottom: -5.5rem;
+}
+.swiper-button-next {
+  right: 0px;
 }
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
@@ -152,7 +154,9 @@ input::placeholder {
 .no-padding-bottom {
   padding-bottom: 0 !important;
 }
-
+.sp-margin {
+  margin-bottom: -26px;
+}
 .app {
   display: grid;
   grid-template-columns: 32rem 1fr;
@@ -174,7 +178,9 @@ input::placeholder {
   position: relative;
   overflow-y: scroll;
 }
-
+.image-width-spesh {
+  width: 160px;
+}
 .order::-webkit-scrollbar {
   width: 5px;
   z-index: 3;
@@ -280,11 +286,22 @@ input::placeholder {
   visibility: hidden;
   transition: all 0.5s ease 0s;
 }
+.spesh_con_plus {
+  height: 68px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-bottom: 5px;
+}
+.spesh_con_plus img {
+  width: 50px;
+  height: 50px;
+}
 .button_nextt {
   display: block;
   padding: 10px;
   border-radius: 5px;
-  background: grey;
+  background: #c4c4c4;
   pointer-events: none;
   transition: all 0.3s ease 0s;
 }
@@ -313,6 +330,7 @@ input::placeholder {
 }
 /*--Стилизуем POP-UP второго уровня в "Бургер-меню" (Выезжающий слайдер влево)--*/
 .user__popup__lvl__2 {
+  z-index: 5;
   position: fixed;
   height: 100%;
   transition: all 0.5s ease 0s;
@@ -480,17 +498,14 @@ input::placeholder {
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-
 input:checked + .slider {
   background-color: #2196f3;
 }
-
 input:checked + .slider:before {
   -webkit-transform: translateX(24px);
   -ms-transform: translateX(24px);
   transform: translateX(24px);
 }
-
 .chat__title {
   font-style: normal;
   font-weight: 400;
@@ -501,8 +516,27 @@ input:checked + .slider:before {
   text-transform: uppercase;
   margin-bottom: 36px;
 }
-
+.spesh_height {
+  height: 150px !important;
+}
+.car__close-icon {
+  transform: rotate(180deg);
+}
+@media (min-width: 767px) {
+  .d-3 {
+    display: none;
+  }
+  .image-width-spesh {
+    width: 110px;
+  }
+}
 @media (max-width: 1200px) {
+  .order__popup {
+    left: 0;
+  }
+  .order__popup.open {
+    left: 27rem;
+  }
   .app {
     grid-template-columns: 27rem 1fr;
   }
