--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/appHeader.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/appHeader.css
@@ -9,7 +9,7 @@
 }
 .vlt img {
 }
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .app__header {
     display: flex;
     border-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) rgb(0, 0, 0); /* Цвет границы */
@@ -17,6 +17,8 @@
     border-width: 1px;
     margin-top: 1rem;
     padding-bottom: 0.5rem;
+    justify-content: space-between;
+    align-items: center;
   }
   .profile {
   }
