--- a/local/templates/lk.thevalet.ru/css/main_mobile.css
+++ b/local/templates/lk.thevalet.ru/css/main_mobile.css
@@ -14,6 +14,9 @@
   body {
     overflow-y: scroll;
   }
+  .chat {
+    margin-top: 25px;
+  }
   .app {
     display: flex;
     flex-direction: column-reverse;
@@ -82,12 +85,13 @@
     width: 2rem;
     height: 5px;
     border-radius: 5px;
-    background-color: #ededed;
+    background-color: gray;
     margin-top: 0.7rem;
     margin-bottom: 1rem;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    z-index: 500;
   }
   .service {
     margin-bottom: 20px;
@@ -205,11 +209,13 @@
   .user__popup__lvl__2 {
     top: 100%;
   }
+  .user__popup__lvl__2 {
+    width: 100%;
+    height: 100%;
+  }
   .user__popup__lvl__2.open {
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
   }
   .order__popup {
     position: fixed;
@@ -253,3 +259,4 @@
     transition: left ease-out 0.3s;
   }
 }
+
