--- a/local/templates/lk.thevalet.ru/css/auth.css
+++ b/local/templates/lk.thevalet.ru/css/auth.css
@@ -143,13 +143,14 @@ select.auth__country::-ms-expand {
   line-height: 18px;
 }
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
   .auth__wrapper {
     display: block;
     padding: 22px;
   }
   .main__auth {
     height: 100%;
+    padding-bottom: 200px;
   }
 
   .auth {
