--- a/local/templates/lk.thevalet.ru/css/main_mobile.css
+++ b/local/templates/lk.thevalet.ru/css/main_mobile.css
@@ -22,7 +22,9 @@
     flex-direction: column-reverse;
   }
   .nav_group {
-    display: none;
+    width: 100%;
+    left: 0;
+    bottom: -5rem;
   }
   .d-3-none {
     display: none;
@@ -44,7 +46,7 @@
     height: 0;
   }
   .app__window {
-    width: 100%;
+    margin: 0 auto;
     padding: 40px 10px;
     overflow-y: auto;
   }
@@ -110,6 +112,9 @@
   }
   .chapter__title__mobile {
     display: none;
+  }
+  .profile__name2 {
+    min-height: 20px;
   }
   .button__hide {
     display: none;
@@ -254,9 +259,7 @@
     top: 100%;
     width: 100%;
     height: 100%;
-
     background: #fff;
     transition: left ease-out 0.3s;
   }
 }
-
