--- a/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
+++ b/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
@@ -1,5 +1,5 @@
 .vlt_servise.active .servise__name {
-  background: transparent;
+  background-color: transparent;
 }
 .service__icon {
   position: absolute;
@@ -19,10 +19,22 @@
 }
 .vlt_servise_img {
   border-radius: 10px;
+  position: relative;
+  transform: scale(0.8);
+  bottom: -25px;
+}
+.image__conts {
+  display: flex;
+  width: 200px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
 }
 .servise__name {
   transition: all 0.3s ease 0s;
-  background: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 201px;
   height: 150px;
   position: absolute;
