--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/formSearchAdress.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/formSearchAdress.css
@@ -3,14 +3,14 @@
   margin-top: 1rem;
 }
 .search__field {
-  border: none;
-  outline: none;
   width: 100%;
   border-bottom: 1px solid #7a7779;
   padding: 0px 30px 15px 7px;
   background-color: transparent;
   box-sizing: border-box;
   font-size: 20px;
+  border: none !important;
+  outline: none !important;
 }
 .search__submit {
   position: absolute;
@@ -18,7 +18,6 @@
   top: 0;
 }
 .search__icon {
-  outline: none;
   text-decoration: none;
   width: 100%;
   border-bottom: 1px solid #7a7779;
@@ -26,7 +25,8 @@
   background-color: transparent;
   box-sizing: border-box;
   font-size: 20px;
-  border: none;
+  border: none !important;
+  outline: none !important;
 }
 
 @media screen and (max-width: 767px) {
