--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garageOnOrder.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garageOnOrder.css
@@ -14,8 +14,7 @@
   height: 10rem;
   width: 12rem;
   align-items: center;
-  transition-duration: 0.3s;
-  transition: 0.3s all ease;
+  transition: all 0.3s ease 0s;
 }
 .auto.active {
   background: #ededed;
@@ -60,6 +59,23 @@
 .add__auto .number__message__item {
   display: none;
 }
+.swiper-button-next {
+  transition: all 0.3s ease 0s;
+  color: #000;
+  border-radius: 5px;
+}
+.swiper-button-prev {
+  transition: all 0.3s ease 0s;
+  border-radius: 5px;
+  color: #000;
+}
+.swiper-button-next:hover {
+  background-color: #ededed;
+}
+.swiper-button-prev:hover {
+  background-color: #ededed;
+}
+
 @media (max-width: 767px) {
   .nav_group-garage {
     width: 100%;
@@ -68,32 +84,14 @@
     bottom: -4.5rem;
   }
   .swiper-button-next {
-    transition: all 0.3s ease 0s;
-    right: 10px;
-    background-color: gray;
+    right: 5px;
     color: #fff;
-    border-radius: 5px;
-    opacity: 0.8;
   }
   .swiper-button-prev {
-    transition: all 0.3s ease 0s;
-    left: 10px;
-    border-radius: 5px;
-    background-color: gray;
+    left: 5px;
     color: #fff;
+  }
 
-    opacity: 0.8;
-  }
-  .swiper-button-next:hover {
-    opacity: 1;
-    background-color: gray;
-    color: #fff;
-  }
-  .swiper-button-prev:hover {
-    opacity: 1;
-    background-color: gray;
-    color: #fff;
-  }
   .garage__on__order {
     margin: 0;
     position: relative;
