--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main.css
@@ -131,7 +131,7 @@ input::placeholder {
   bottom: -5.5rem;
 }
 .swiper-button-next {
-  right: 0px;
+  right: 6px;
 }
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
@@ -263,8 +263,154 @@ input::placeholder {
   background-color: #c4c4c4;
   cursor: not-allowed;
 }
+.tirest {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.tirest__title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #000000;
+  margin-bottom: 18px;
+}
+.tiresm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.tiresm__text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+  margin-bottom: 10px;
+}
+.tiresm__gap {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+  bottom: -1rem;
+  position: relative;
+}
+.tiresm__step {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #000000;
+}
+.tiresm__input {
+  max-width: 185px;
+  text-align: center;
+  text-transform: uppercase;
+  box-shadow: 0px 0px 4px 1px rgb(0 0 0 / 25%);
+  text-transform: uppercase;
+  box-sizing: border-box;
+  max-height: 37px;
+  background: #ffffff;
+  border: 1px solid #e3dfdf;
+  border-radius: 5px;
+  margin: 0 auto;
+  font-size: 30px;
+  line-height: 37px;
+  color: #c7c7c7;
+  display: flex;
+  align-items: center;
+}
+.tiresc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-top: 27px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
 
-/*--*/
+/* Hide default HTML checkbox */
+.switch input {
+  display: none;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: black !important;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px black;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.cls-1 path {
+  fill: transparent;
+  stroke: white;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+  transition: all 0.1s ease 0s;
+}
+.cls-1.favourite path {
+  fill: white;
+  stroke: white;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+}
+.cls-2 path {
+  fill: gray;
+  stroke: gray;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+}
+
 .app__window {
   top: 0;
   left: 0;
@@ -287,7 +433,7 @@ input::placeholder {
   transition: all 0.5s ease 0s;
 }
 .spesh_con_plus {
-  height: 68px;
+  height: 74px;
   display: flex;
   justify-content: center;
   align-items: end;
@@ -296,6 +442,7 @@ input::placeholder {
 .spesh_con_plus img {
   width: 50px;
   height: 50px;
+  flex: 0 0 50px;
 }
 .button_nextt {
   display: block;
@@ -350,6 +497,7 @@ input::placeholder {
   left: 32rem;
 }
 .user__popup__lvl__2.open .user__popup__lvl__2__content {
+  overflow-x: hidden;
   overflow-y: scroll;
   position: relative;
   background: #fff;
@@ -522,6 +670,9 @@ input:checked + .slider:before {
 .car__close-icon {
   transform: rotate(180deg);
 }
+.drag__container .drag__element {
+  z-index: 1;
+}
 @media (min-width: 767px) {
   .d-3 {
     display: none;
@@ -537,6 +688,9 @@ input:checked + .slider:before {
   .order__popup.open {
     left: 27rem;
   }
+  .swiper-button-next {
+    right: -8px;
+  }
   .app {
     grid-template-columns: 27rem 1fr;
   }
@@ -546,5 +700,14 @@ input:checked + .slider:before {
   }
   .user__popup__lvl__2.open {
     left: 27rem;
+  }
+}
+
+@media (max-width: 514px) {
+  .cardel__buttons {
+    gap: 10px !important;
+  }
+  .cardel__button {
+    width: 110px !important;
   }
 }
