--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main_mobile.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/main_mobile.css
@@ -14,12 +14,17 @@
   body {
     overflow-y: scroll;
   }
+  .chat {
+    margin-top: 25px;
+  }
   .app {
     display: flex;
     flex-direction: column-reverse;
   }
   .nav_group {
-    display: none;
+    width: 100%;
+    left: 0;
+    bottom: -5rem;
   }
   .d-3-none {
     display: none;
@@ -41,7 +46,7 @@
     height: 0;
   }
   .app__window {
-    width: 100%;
+    margin: 0 auto;
     padding: 40px 10px;
     overflow-y: auto;
   }
@@ -66,6 +71,9 @@
     width: 5px;
     z-index: 3;
   }
+  .tires {
+    margin-top: 30px;
+  }
   .order::-webkit-scrollbar-track {
     background: transparent;
   }
@@ -79,12 +87,13 @@
     width: 2rem;
     height: 5px;
     border-radius: 5px;
-    background-color: #ededed;
+    background-color: gray;
     margin-top: 0.7rem;
     margin-bottom: 1rem;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    z-index: 500;
   }
   .service {
     margin-bottom: 20px;
@@ -104,6 +113,9 @@
   .chapter__title__mobile {
     display: none;
   }
+  .profile__name2 {
+    min-height: 20px;
+  }
   .button__hide {
     display: none;
   }
@@ -121,7 +133,11 @@
     background-color: #fff;
     z-index: 10;
   }
+  .spesh_con_plus {
+    height: 95px;
+  }
   .spesh_con_plus img {
+    flex: 0 0 60px;
     width: 60px;
     height: 60px;
   }
@@ -169,7 +185,7 @@
 
     transition: all 0.3s ease 0s;
   }
-  
+
   .double__popup__content {
     display: flex;
     align-items: flex-end;
@@ -202,11 +218,13 @@
   .user__popup__lvl__2 {
     top: 100%;
   }
+  .user__popup__lvl__2 {
+    width: 100%;
+    height: 100%;
+  }
   .user__popup__lvl__2.open {
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
   }
   .order__popup {
     position: fixed;
@@ -245,7 +263,6 @@
     top: 100%;
     width: 100%;
     height: 100%;
-
     background: #fff;
     transition: left ease-out 0.3s;
   }
