--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
@@ -1,5 +1,5 @@
 .vlt_servise.active .servise__name {
-  background: transparent;
+  background-color: transparent;
 }
 .service__icon {
   position: absolute;
@@ -17,11 +17,25 @@
   width: 24px;
   height: 24px;
 }
-
+.vlt_servise_img {
+  border-radius: 10px;
+  position: relative;
+  transform: scale(0.8);
+  bottom: -25px;
+}
+.image__conts {
+  display: flex;
+  width: 200px;
+  height: 150px;
+  overflow: hidden;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+}
 .servise__name {
   transition: all 0.3s ease 0s;
-  background: rgba(0, 0, 0, 0.6);
-  width: 202px;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 201px;
   height: 150px;
   position: absolute;
   top: 0;
@@ -29,7 +43,8 @@
   justify-content: center;
   align-items: center;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 18px;
+  border-radius: 10px;
 }
 .heit {
   height: 100% !important;
@@ -47,8 +62,5 @@
   .vlt_servise.active {
   }
   .service__icon {
-  }
-  .servise__name {
-    font-size: 0.7rem;
   }
 }
