--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/serviceListOnOrder.css
@@ -20,8 +20,9 @@
 .vlt_servise_img {
   border-radius: 10px;
   position: relative;
-  transform: scale(0.8);
+  /*transform: scale(0.8);
   bottom: -25px;
+  */
 }
 .image__conts {
   display: flex;
