--- a/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garage.css
+++ b/lk.thevalet.ru/local/templates/lk.thevalet.ru/css/garage.css
@@ -8,6 +8,7 @@
   position: relative;
 }
 .img__trash-l {
+  width: 40px;
   position: absolute;
   top: 15%;
   right: 5%;
@@ -18,6 +19,7 @@
 }
 
 .img__trash {
+  width: 40px;
   position: absolute;
   top: 50%;
   right: 0;
